// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Status render not state 1`] = `
<View
  style={
    [
      {
        "borderRadius": 4,
        "paddingHorizontal": 6,
        "paddingVertical": 2,
      },
      {
        "backgroundColor": "#EDEFF3",
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#5E6678",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 16,
          "minHeight": 16,
        },
        undefined,
      ]
    }
  >
    text
  </Text>
</View>
`;

exports[`Status render type dot blue 1`] = `
<View
  style={
    [
      {
        "borderRadius": 4,
        "height": 8,
        "width": 8,
      },
      {
        "backgroundColor": "#2B78EE",
      },
      undefined,
    ]
  }
/>
`;

exports[`Status render type dot gray 1`] = `
<View
  style={
    [
      {
        "borderRadius": 4,
        "height": 8,
        "width": 8,
      },
      {
        "backgroundColor": "#D0D6E0",
      },
      undefined,
    ]
  }
/>
`;

exports[`Status render type dot green 1`] = `
<View
  style={
    [
      {
        "borderRadius": 4,
        "height": 8,
        "width": 8,
      },
      {
        "backgroundColor": "#29A35C",
      },
      {
        "flex": 1,
      },
    ]
  }
/>
`;

exports[`Status render type dot orange 1`] = `
<View
  style={
    [
      {
        "borderRadius": 4,
        "height": 8,
        "width": 8,
      },
      {
        "backgroundColor": "#FE8027",
      },
      undefined,
    ]
  }
/>
`;

exports[`Status render type dot red 1`] = `
<View
  style={
    [
      {
        "borderRadius": 4,
        "height": 8,
        "width": 8,
      },
      {
        "backgroundColor": "#F54C3D",
      },
      undefined,
    ]
  }
/>
`;

exports[`Status render type tag blue 1`] = `
<View
  style={
    [
      {
        "borderRadius": 4,
        "paddingHorizontal": 6,
        "paddingVertical": 2,
      },
      {
        "backgroundColor": "rgba(91, 153, 249, 0.1)",
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#2B78EE",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 16,
          "minHeight": 16,
        },
        undefined,
      ]
    }
  >
    text
  </Text>
</View>
`;

exports[`Status render type tag gray 1`] = `
<View
  style={
    [
      {
        "borderRadius": 4,
        "paddingHorizontal": 6,
        "paddingVertical": 2,
      },
      {
        "backgroundColor": "#EDEFF3",
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#5E6678",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 16,
          "minHeight": 16,
        },
        undefined,
      ]
    }
  >
    text
  </Text>
</View>
`;

exports[`Status render type tag green 1`] = `
<View
  style={
    [
      {
        "borderRadius": 4,
        "paddingHorizontal": 6,
        "paddingVertical": 2,
      },
      {
        "backgroundColor": "rgba(58, 189, 112, 0.1)",
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#29A35C",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 16,
          "minHeight": 16,
        },
        undefined,
      ]
    }
  >
    text
  </Text>
</View>
`;

exports[`Status render type tag orange 1`] = `
<View
  style={
    [
      {
        "borderRadius": 4,
        "paddingHorizontal": 6,
        "paddingVertical": 2,
      },
      {
        "backgroundColor": "rgba(250, 146, 71, 0.1)",
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#FE8027",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 16,
          "minHeight": 16,
        },
        undefined,
      ]
    }
  >
    text
  </Text>
</View>
`;

exports[`Status render type tag red 1`] = `
<View
  style={
    [
      {
        "borderRadius": 4,
        "paddingHorizontal": 6,
        "paddingVertical": 2,
      },
      {
        "backgroundColor": "rgba(249, 97, 84, 0.1)",
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#F54C3D",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 16,
          "minHeight": 16,
        },
        undefined,
      ]
    }
  >
    text
  </Text>
</View>
`;
